Fixed gap under Client section & stats on the home page

--- a/src/components/Clients/OurClients.scss
+++ b/src/components/Clients/OurClients.scss
@@ -11,6 +11,19 @@
             @include font(36px, $green, 900); 
         }
     }
+    .rfm-marquee{
+      min-width: fit-content;
+    }
+
+    @media (min-width: 2000px){
+      .rfm-marquee{
+        gap: 80px;
+      }
+      .rfm-initial-child-container{
+        gap: 80px;
+      }
+    }
+
 
     .marquee {
         display: flex;
